--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.13.3",
     "cheerio": "^0.19.0",
     "cookie-parser": "^1.3.5",
+    "cors": "^2.7.1",
     "crypto": "0.0.3",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
